// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`layout metrics (sizing harness) metrics: density-compact-flat 1`] = `
{
  "axisHeight": 30,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 74,
      "x": 8,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 710,
      "x": 82,
    },
  ],
  "forestWidth": 710,
  "headerHeight": 29,
  "labelWidth": 74,
  "mainY": 16,
  "plotHeight": 120,
  "rows": [
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 10,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 30,
      "top": 20,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 50,
      "top": 40,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 70,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 90,
      "top": 80,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 110,
      "top": 100,
    },
  ],
  "rowsHeight": 120,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 0,
    "rowHeight": 20,
  },
  "totalHeight": 207,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-comfortable-flat 1`] = `
{
  "axisHeight": 34,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 78,
      "x": 12,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 698,
      "x": 90,
    },
  ],
  "forestWidth": 698,
  "headerHeight": 32,
  "labelWidth": 78,
  "mainY": 24,
  "plotHeight": 144,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 108,
      "top": 96,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 132,
      "top": 120,
    },
  ],
  "rowsHeight": 144,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 250,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-spacious-flat 1`] = `
{
  "axisHeight": 38,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 86,
      "x": 16,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 682,
      "x": 102,
    },
  ],
  "forestWidth": 682,
  "headerHeight": 40,
  "labelWidth": 86,
  "mainY": 32,
  "plotHeight": 180,
  "rows": [
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 15,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 45,
      "top": 30,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 75,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 105,
      "top": 90,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 135,
      "top": 120,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 165,
      "top": 150,
    },
  ],
  "rowsHeight": 180,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 0,
    "rowHeight": 30,
  },
  "totalHeight": 312,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-compact-overall 1`] = `
{
  "axisHeight": 30,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 74,
      "x": 8,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 710,
      "x": 82,
    },
  ],
  "forestWidth": 710,
  "headerHeight": 29,
  "labelWidth": 74,
  "mainY": 16,
  "plotHeight": 130,
  "rows": [
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 10,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 30,
      "top": 20,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 50,
      "top": 40,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 70,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 90,
      "top": 80,
    },
  ],
  "rowsHeight": 100,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 0,
    "rowHeight": 20,
  },
  "totalHeight": 217,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-comfortable-overall 1`] = `
{
  "axisHeight": 34,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 78,
      "x": 12,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 698,
      "x": 90,
    },
  ],
  "forestWidth": 698,
  "headerHeight": 32,
  "labelWidth": 78,
  "mainY": 24,
  "plotHeight": 156,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 108,
      "top": 96,
    },
  ],
  "rowsHeight": 120,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 262,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-spacious-overall 1`] = `
{
  "axisHeight": 38,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 86,
      "x": 16,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 682,
      "x": 102,
    },
  ],
  "forestWidth": 682,
  "headerHeight": 40,
  "labelWidth": 86,
  "mainY": 32,
  "plotHeight": 195,
  "rows": [
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 15,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 45,
      "top": 30,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 75,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 105,
      "top": 90,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 135,
      "top": 120,
    },
  ],
  "rowsHeight": 150,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 0,
    "rowHeight": 30,
  },
  "totalHeight": 327,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: wrap-compact 1`] = `
{
  "axisHeight": 30,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 69,
      "x": 8,
    },
    {
      "id": "notes",
      "type": "text",
      "width": 160,
      "x": 77,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 555,
      "x": 237,
    },
  ],
  "forestWidth": 555,
  "headerHeight": 29,
  "labelWidth": 69,
  "mainY": 16,
  "plotHeight": 116,
  "rows": [
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 24,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 58,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 92,
      "top": 68,
    },
  ],
  "rowsHeight": 116,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 0,
    "rowHeight": 20,
  },
  "totalHeight": 203,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: wrap-comfortable 1`] = `
{
  "axisHeight": 34,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 73,
      "x": 12,
    },
    {
      "id": "notes",
      "type": "text",
      "width": 160,
      "x": 85,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 543,
      "x": 245,
    },
  ],
  "forestWidth": 543,
  "headerHeight": 32,
  "labelWidth": 73,
  "mainY": 24,
  "plotHeight": 120,
  "rows": [
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 24,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 96,
      "top": 72,
    },
  ],
  "rowsHeight": 120,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 226,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: wrap-spacious 1`] = `
{
  "axisHeight": 38,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 81,
      "x": 16,
    },
    {
      "id": "notes",
      "type": "text",
      "width": 160,
      "x": 97,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 527,
      "x": 257,
    },
  ],
  "forestWidth": 527,
  "headerHeight": 40,
  "labelWidth": 81,
  "mainY": 32,
  "plotHeight": 126,
  "rows": [
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 24,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 63,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 102,
      "top": 78,
    },
  ],
  "rowsHeight": 126,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 0,
    "rowHeight": 30,
  },
  "totalHeight": 258,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: indent-depths 1`] = `
{
  "axisHeight": 34,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 123,
      "x": 12,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 653,
      "x": 135,
    },
  ],
  "forestWidth": 653,
  "headerHeight": 32,
  "labelWidth": 123,
  "mainY": 24,
  "plotHeight": 96,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 1,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 2,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 3,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
  ],
  "rowsHeight": 96,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 202,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: spacers 1`] = `
{
  "axisHeight": 34,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 135,
      "x": 12,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 641,
      "x": 147,
    },
  ],
  "forestWidth": 641,
  "headerHeight": 32,
  "labelWidth": 135,
  "mainY": 24,
  "plotHeight": 84,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 12,
      "indent": 0,
      "index": 2,
      "kind": "spacer",
      "markerCenter": 54,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 72,
      "top": 60,
    },
  ],
  "rowsHeight": 84,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 190,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: groups-compact 1`] = `
{
  "axisHeight": 30,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 106,
      "x": 8,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 678,
      "x": 114,
    },
  ],
  "forestWidth": 678,
  "headerHeight": 29,
  "labelWidth": 106,
  "mainY": 16,
  "plotHeight": 120,
  "rows": [
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 0,
      "kind": "group_header",
      "markerCenter": 10,
      "top": 0,
    },
    {
      "depth": 1,
      "height": 20,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 30,
      "top": 20,
    },
    {
      "depth": 1,
      "height": 20,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 50,
      "top": 40,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 3,
      "kind": "group_header",
      "markerCenter": 70,
      "top": 60,
    },
    {
      "depth": 1,
      "height": 20,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 90,
      "top": 80,
    },
    {
      "depth": 1,
      "height": 20,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 110,
      "top": 100,
    },
  ],
  "rowsHeight": 120,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 0,
    "rowHeight": 20,
  },
  "totalHeight": 207,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: groups-comfortable 1`] = `
{
  "axisHeight": 34,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 110,
      "x": 12,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 666,
      "x": 122,
    },
  ],
  "forestWidth": 666,
  "headerHeight": 32,
  "labelWidth": 110,
  "mainY": 24,
  "plotHeight": 144,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "group_header",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 1,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 1,
      "height": 24,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "group_header",
      "markerCenter": 84,
      "top": 72,
    },
    {
      "depth": 1,
      "height": 24,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 108,
      "top": 96,
    },
    {
      "depth": 1,
      "height": 24,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 132,
      "top": 120,
    },
  ],
  "rowsHeight": 144,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 250,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: groups-spacious 1`] = `
{
  "axisHeight": 38,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 118,
      "x": 16,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 650,
      "x": 134,
    },
  ],
  "forestWidth": 650,
  "headerHeight": 40,
  "labelWidth": 118,
  "mainY": 32,
  "plotHeight": 180,
  "rows": [
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 0,
      "kind": "group_header",
      "markerCenter": 15,
      "top": 0,
    },
    {
      "depth": 1,
      "height": 30,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 45,
      "top": 30,
    },
    {
      "depth": 1,
      "height": 30,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 75,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 3,
      "kind": "group_header",
      "markerCenter": 105,
      "top": 90,
    },
    {
      "depth": 1,
      "height": 30,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 135,
      "top": 120,
    },
    {
      "depth": 1,
      "height": 30,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 165,
      "top": 150,
    },
  ],
  "rowsHeight": 180,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 0,
    "rowHeight": 30,
  },
  "totalHeight": 312,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: mixed-columns 1`] = `
{
  "axisHeight": 34,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 78,
      "x": 12,
    },
    {
      "id": "n",
      "type": "numeric",
      "width": 60,
      "x": 90,
    },
    {
      "id": "grade",
      "type": "badge",
      "width": 74,
      "x": 150,
    },
    {
      "id": "pct",
      "type": "bar",
      "width": 100,
      "x": 224,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 464,
      "x": 324,
    },
  ],
  "forestWidth": 464,
  "headerHeight": 32,
  "labelWidth": 78,
  "mainY": 24,
  "plotHeight": 120,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 108,
      "top": 96,
    },
  ],
  "rowsHeight": 120,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 226,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: pure-table-no-axis 1`] = `
{
  "axisHeight": 0,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 78,
      "x": 12,
    },
    {
      "id": "n",
      "type": "numeric",
      "width": 60,
      "x": 90,
    },
  ],
  "forestWidth": 0,
  "headerHeight": 32,
  "labelWidth": 78,
  "mainY": 24,
  "plotHeight": 96,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
  ],
  "rowsHeight": 96,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 168,
  "totalWidth": 162,
}
`;
